--- a/6 - JS Intro/index.html
+++ b/6 - JS Intro/index.html
@@ -4,10 +4,11 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
-  <link rel="icon" href="">
 </head>
 
 <body>
-  <p> Hi </p>
+  <p class="special-text"> Hello </p> <!-- comment -->
+
+  <script src="client.js"></script>
 </body>
 </html>
