--- a/8 - JS loops and functions/Exercism solutions/index.html
+++ b/8 - JS loops and functions/Exercism solutions/index.html
@@ -11,7 +11,7 @@
 <body>
   <p class="special-text"> Hello </p> <!-- comment -->
 
-  <script src="strings.js"></script>
-  <script src="arrays.js"></script>
+  <script src="global.js"></script>
+  <script src="easyProblems.js"></script>
 </body>
 </html>
