--- a/5 - Client JS/test/index.html
+++ b/5 - Client JS/test/index.html
@@ -21,12 +21,10 @@
 
 <body>
   <button> Hello </button>
+  <button class="btn btn-primary" onclick="sayHelloToConsole()"> Say hello to console </button>
+  <button class="btn btn-primary" id="helloToConsoleButton"> Say hello to console </button>
+  <button class="btn btn-primary" id="helloToWebpageButton"> Say hello to webpage </button>
 
-  <div id="content-div">
-    <button> Hello button inside div </button>
-  </div>
-
-  <script src="global.js"></script>
   <script src="client.js"></script>
 </body>
 </html>
