--- a/6 - APIs/chatbot/index.html
+++ b/6 - APIs/chatbot/index.html
@@ -11,21 +11,20 @@
 </head>
 
 <body>
-  <div class="chat-container">
+  <div id="chat-container">
 
-    <!-- 
-    <div class="chat-messages">
-      <div class="message bot">Hi there! How can I help you today?</div>
-      <div class="message user">Can you tell me the weather?</div>
-      <div class="message bot">Sure! It's sunny with a high of 25°C.</div>
-      <div class="message user">Thanks!</div>
-    </div>
+    <!-- sample messages -->
+    <!--
+    <div class="message bot-message">Hi there! How can I help you today?</div>
+    <div class="message user-message">Can you tell me the weather?</div>
+    <div class="message bot-message">Sure! It's sunny with a high of 25°C.</div>
+    <div class="message user-message">Thanks!</div>
     -->
+  </div>
 
-    <div class="chat-footer">
-      <input type="text" class="form-control" placeholder="Type your message...">
-      <button class="btn btn-primary"> Send </button>
-    </div>
+  <div id="chat-footer">
+    <input type="text" id="message-field" class="form-control" placeholder="Type your message...">
+    <button class="btn btn-primary" id="send-button"> Send </button>
   </div>
 
   <script src="global.js"></script>
