--- a/7.1 - Matt final project/day 2/day2.html
+++ b/7.1 - Matt final project/day 2/day2.html
@@ -19,7 +19,7 @@
         <li><a href="#contact">Contact</a></li>
         <li class="cart-icon" onclick="toggleCart()">
           🛒
-          <span class="cart-count" id="cartCount">0</span>
+          <span class="cart-count" id="cartCount"> 0 </span>
         </li>
       </ul>
     </nav>
@@ -38,27 +38,35 @@
       <h2>Featured Products</h2>
       <div class="product-grid" id="productGrid">
         <!-- Products will be populated by JavaScript -->
+        <!-- innerHtml -->
       </div>
     </div>
   </section>
 
-  <!-- Cart Modal -->
+  <!-- Cart popup -->
   <div id="cartModal" class="cart-modal">
     <div class="cart-content">
       <div class="cart-header">
         <h2>Shopping Cart</h2>
         <button class="close-cart" onclick="toggleCart()">&times;</button>
+        <!-- &times; looks like an X when displayed -->
       </div>
-      <div id="cartItems"></div>
+
+      <div id="cartItems">
+      </div>
+
       <div class="cart-total">
-        <div class="total-amount">Total: $<span id="totalAmount">0.00</span></div>
-        <button class="btn btn-success">Proceed to Checkout</button>
+        <div class="total-amount"> 
+            Total: $<span id="totalAmount"> 0.00 </span> 
+        </div>
+
+        <button class="btn btn-success"> Proceed to Checkout </button>
       </div>
     </div>
   </div>
 
-  <!-- Notification -->
-  <div id="notification" class="notification"></div>
+  <!-- Notification when item is added to the cart -->
+  <div id="notification" class="notification" style="display: none"> Item added to cart </div>
 
   <footer>
     <div class="container">
@@ -66,6 +74,7 @@
     </div>
   </footer>
 
+  <script src="global.js"></script>
   <script src="client.js"></script>
 </body>
 </html>
